# flightsimto-scraper

./: .gitignore  CMakeCache.txt  CMakeLists.txt  readme.md
.github/workflows/: ci.yml  main.yml
src/: main.cpp
